[package]
name = "odin"
version = "0.1.0"
edition = "2024"

[lib]
name = "odin"
path = "src/lib.rs"

[[bin]]
name = "odin-server"
path = "src/server.rs"

[[bin]]
name = "odin-client"
path = "src/client.rs"


[dependencies]
chrono = "0.4"
clap = { version = "4.5.53", features = ["derive", "env"] }
futures-util = "0.3"
prost = "0.14.1"
regex = "1.12.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
solana-commitment-config = "3.1.0"
solana-rpc-client = "3.1.4"
solana-rpc-client-api = "3.1.4"
solana-sdk = "3.0.0"
solana-transaction-status-client-types = "3.1.4"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
tokio-stream = "0.1"
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
tonic = "0.14.2"
tonic-prost = "0.14.2"


[build-dependencies]
tonic-build = "0.14.2"
tonic-prost-build = "0.14.2"